DD-42196 Merge branch  main into team/dlrm7 (#225)